@@ -89,21 +89,86 @@ Please check execute the following command before contributing. then please push
 ./gradlew clean goJF check
 ```
 
-## Project
-
-### Gradle
-
-TODO
-
-### Maven
-
-TODO
-
 ### Customize project manually
 
 * Write `.meghanada.conf` on project root.
 
-TODO
+example:
+
+```
+# This is an annotated reference of the options that may be set in a
+# .meghanada.conf file.
+#
+
+# Set JAVA_HOME
+# Type: string
+java-home = "/usr/lib/jvm/default
+
+# Set java version
+# Type: string
+#
+# It is same effect following code.
+# System.setProperty("java.specification.version", val);
+java-version = "1.8"
+
+# Set source compatibility
+# Type: string
+compile-source = "1.8"
+
+# Set target compatibility
+# Type: string
+compile-target = "1.8"
+
+java11-javac-args = [
+                 "--add-exports",
+                 "jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED",
+                 "--add-exports",
+                 "jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED",
+                 "--add-exports",
+                 "jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
+                 "--add-exports",
+                 "jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
+                 "--add-exports",
+                 "jdk.compiler/com.sun.tools.javac.resources=ALL-UNNAMED",
+                 "--add-exports",
+                 "jdk.compiler/com.sun.tools.javac.resources=ALL-UNNAMED",
+                 "--add-exports",
+                 "java.management/sun.management=ALL-UNNAMED",
+]
+
+# Set dependencies file list (jar filepath)
+# Type: string list
+dependencies = ["/home/user/.m2/repository/org/apache/maven/maven-model/3.3.9/maven-model-3.3.9.jar", "/home/user/.m2/repository/org/codehaus/plexus/plexus-utils/3.0.22/plexus-utils-3.0.22.jar", "/home/user/.m2/repository/org/apache/commons/commons-lang3/3.4/commons-lang3-3.4.jar" ... ]
+
+# Set test dependencies file list (jar filepath)
+# Type: string list
+test-dependencies = ["/home/ma2/.m2/repository/junit/junit/4.12/junit-4.12.jar" ... ]
+
+# Set source directories
+# Type: string list
+sources = ["src/main/java"]
+
+# Set resource directories
+# Type: string list
+resources = ["src/main/resources"]
+
+# Set classes output directory
+# Type: string
+output = "build/main/classes"
+
+# Set test source directories
+# Type: string list
+test-sources = ["src/test/java"]
+
+# Set testt resource directories
+# Type: string list
+test-resources = ["src/test/resources"]
+
+# Set test classes output directory
+# Type: string
+test-output = "build/test/classes"
+
+```
 
 ## License
 
